Add github workflow for releasing application